added color to hero text and added imgs

--- a/assets/css/style.2.css
+++ b/assets/css/style.2.css
@@ -377,6 +377,9 @@ section.homepage-two-slider.h-100 {
      background: #222;
      color: #fff;
 }
+.red{
+     color: red;
+}
 /* home two shop area css */
  .home-two-shop-single-item-feature-image {
      height: 300px;
